--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@reown/appkit": "^1.7.6",
     "@reown/appkit-adapter-ethers": "^1.7.6",
+    "@reown/appkit-adapter-wagmi": "^1.7.6",
+    "@tanstack/react-query": "^5.77.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -16,10 +18,12 @@
     "@types/react-dom": "^19.1.3",
     "axios": "^1.9.0",
     "ethers": "^6.14.1",
+    "nft.storage": "^7.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.8.3",
+    "wagmi": "^2.15.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
